# inte-edc

./: .codeclimate.yml  .coveragerc  .env-site  .env-tests  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  MANIFEST.in  README.md  README.rst  env.sample  freeze.txt  generate_randomization_list.py  holidays.csv  manage.py  pyproject.toml  requirements.tests.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
docs/: conda.rst  configure_web_services.rst  deploy_new_droplet.rst  forms_reference.md  inte.md  landing_page.rst  prepare_database.rst  printing.rst
inte_ae/: action_items.py  admin_site.py  apps.py  baker_recipes.py  choices.py  list_data.py  urls.py
inte_auth/: apps.py
inte_consent/: action_items.py  admin_site.py  apps.py  choices.py  consents.py  randomizers.py  urls.py
inte_dashboard/: apps.py  navbars.py  urls.py
inte_edc/: apps.py  celery.py  navbars.py  settings.py  urls.py  wsgi.bugamba.py  wsgi.bukulula.py  wsgi.bwizibwera.py  wsgi.mpigi.py  wsgi.muduma.py  wsgi.py  wsgi.sekiwunga.py  wsgi.tikalu.py  wsgi_buwambo.py  wsgi_kajjansi.py  wsgi_kasangati.py  wsgi_kasanje.py  wsgi_kinoni.py  wsgi_kojja.py  wsgi_kyamulibwa.py  wsgi_kyazanga.py  wsgi_live.py  wsgi_namayumba.py  wsgi_namulonge.py  wsgi_ruhoko.py
inte_export/: admin_site.py  apps.py  urls.py
inte_form_validators/: __init__.py  apps.py  models.py
inte_labs/: apps.py  lab_profiles.py  list_data.py  panels.py  reportables.py
inte_lists/: admin.py  admin_site.py  apps.py  list_data.py  models.py  urls.py
inte_metadata_rules/: __init__.py  apps.py  metadata_rules.py  (+1 more)
(+698 files in other folders)
